# Video-Decode-Benchmark

./: .gitignore  CMakeLists.txt  README.md
ffmpeg-cpp/: CMakeLists.txt  FFmpegCodecCtx.cpp  FFmpegCodecCtx.hpp  FFmpegFormatCtx.cpp  FFmpegPacket.hpp
src/: Bench.cpp  Bench.hpp  Semaphore.h  main.cpp
video_set/: fullhd.ts  hd.ts  quadhd.ts  sd.ts
